--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ requests==2.31.0
 scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
+setuptools==69.5.1
 six==1.16.0
 soundfile==0.12.1
 soxr==0.3.7
