--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 annoy==1.17.3
 audioread==3.0.1
-certifi==2024.2.2
+certifi>=2024.07.04
 cffi==1.16.0
 charset-normalizer==3.3.2
 contourpy==1.2.1
@@ -36,10 +36,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
 resampy==0.4.3
-scikit-learn==1.4.2
+scikit-learn>=1.5.0
 scipy==1.13.0
 seaborn==0.13.2
-setuptools==69.5.1
+setuptools>=70.0.0
 six==1.16.0
 soundfile==0.12.1
 soxr==0.3.7
@@ -52,4 +52,4 @@ torchvision==0.17.2
 tqdm==4.67.0
 typing_extensions==4.11.0
 tzdata==2024.1
-urllib3==2.2.1
+urllib3>=2.2.2
